--- a/LanguageOverrideUnpackagedCSharp/MainWindow.xaml
+++ b/LanguageOverrideUnpackagedCSharp/MainWindow.xaml
@@ -8,7 +8,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
+    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <TextBlock x:Uid="SampleLabel" />
+        <Button x:Uid="SampleButton" x:Name="myButton" Click="myButton_Click" />
     </StackPanel>
 </Window>
